--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.3.3",
     "axios-mock-adapter": "^1.21.2",
     "core-js": "^3.6.5",
+    "easy-paginator": "^2.1.0",
     "ionicons": "^6.0.3",
     "pinia": "^2.0.30",
     "vue": "^3.2.21",
