--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@capacitor/status-bar": "4.1.1",
     "@ionic/vue": "^6.0.0",
     "@ionic/vue-router": "^6.0.0",
+    "@pinia/testing": "^0.0.15",
     "axios": "^1.3.3",
     "axios-mock-adapter": "^1.21.2",
     "core-js": "^3.6.5",
