--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit --watch",
     "test:e2e": "vue-cli-service test:e2e",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "release": "release-it"
   },
   "dependencies": {
     "@capacitor/app": "4.1.1",
@@ -47,6 +48,7 @@
     "eslint": "^8.4.1",
     "eslint-plugin-vue": "^9.8.0",
     "jest": "^27.3.1",
+    "release-it": "^15.6.0",
     "ts-jest": "^27.0.7",
     "typescript": "^4.3.5"
   },
