--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "@pinia/testing": "^0.0.15",
     "axios": "^1.3.3",
     "axios-mock-adapter": "^1.21.2",
+    "chart.js": "^4.2.1",
     "core-js": "^3.6.5",
     "easy-paginator": "^2.1.0",
     "ionicons": "^6.0.3",
     "pinia": "^2.0.30",
     "vue": "^3.2.21",
+    "vue-chartjs": "^5.2.0",
     "vue-router": "^4.0.12"
   },
   "devDependencies": {
@@ -48,6 +50,7 @@
     "eslint": "^8.4.1",
     "eslint-plugin-vue": "^9.8.0",
     "jest": "^27.3.1",
+    "jest-canvas-mock": "^2.4.0",
     "release-it": "^15.6.0",
     "ts-jest": "^27.0.7",
     "typescript": "^4.3.5"
