--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "release": "release-it"
   },
   "dependencies": {
+    "@capacitor/android": "4.6.3",
     "@capacitor/app": "4.1.1",
     "@capacitor/core": "4.6.3",
     "@capacitor/haptics": "4.1.0",
