--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "pokemon-challenge",
   "version": "1.1.0",
   "private": true,
+  "description": "An Ionic project",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
@@ -27,6 +28,7 @@
     "easy-paginator": "^2.1.0",
     "ionicons": "^6.0.3",
     "pinia": "^2.0.30",
+    "register-service-worker": "^1.7.2",
     "vue": "^3.2.21",
     "vue-chartjs": "^5.2.0",
     "vue-router": "^4.0.12"
@@ -39,6 +41,7 @@
     "@vue/cli-plugin-babel": "~5.0.0-rc.1",
     "@vue/cli-plugin-e2e-cypress": "~5.0.0-rc.1",
     "@vue/cli-plugin-eslint": "~5.0.0-rc.1",
+    "@vue/cli-plugin-pwa": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0-rc.1",
     "@vue/cli-plugin-typescript": "~5.0.0-rc.1",
     "@vue/cli-plugin-unit-jest": "~5.0.0-rc.1",
@@ -55,6 +58,5 @@
     "release-it": "^15.6.0",
     "ts-jest": "^27.0.7",
     "typescript": "^4.3.5"
-  },
-  "description": "An Ionic project"
+  }
 }
